// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Approved Images correctly when there is a single approved Image 1`] = `
<div>
  <div>
    <div
      className="react-horizontal-scrolling-menu--wrapper "
      onWheel={[Function]}
    >
      <button
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "opacity": "0",
            "right": "1%",
            "userSelect": "none",
          }
        }
      >
        Left
      </button>
      <div
        className="react-horizontal-scrolling-menu--scroll-container "
        onScroll={[Function]}
      >
        <div
          className="react-horizontal-scrolling-menu--item "
          data-index={0}
          data-key="JmFldiNGY18"
        >
          <div
            className="sc-bdvvtL ckbbZK card"
            role="button"
            style={
              Object {
                "margin": "0px 8px 0px 8px",
                "userSelect": "none",
                "width": "120px",
              }
            }
            tabIndex={0}
            title="JmFldiNGY18"
          />
        </div>
      </div>
      <button
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "opacity": "1",
            "right": "1%",
            "userSelect": "none",
          }
        }
      >
        Right
      </button>
    </div>
  </div>
</div>
`;

exports[`Approved Images renders correctly when there are no items 1`] = `
<div>
  <div>
    <div
      className="sc-bdvvtL hCnTfh card"
      role="button"
      style={
        Object {
          "margin": "0px 8px 0px 8px",
          "userSelect": "none",
          "width": "120px",
        }
      }
      tabIndex={0}
      title=""
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-2x "
        color="#e3e8f0"
        data-icon="plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="react-horizontal-scrolling-menu--wrapper "
      onWheel={[Function]}
    >
      <button
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "opacity": "0",
            "right": "1%",
            "userSelect": "none",
          }
        }
      >
        Left
      </button>
      <div
        className="react-horizontal-scrolling-menu--scroll-container "
        onScroll={[Function]}
      >
        <div
          className="react-horizontal-scrolling-menu--item "
          data-index={0}
        >
          <div />
        </div>
      </div>
      <button
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "opacity": "1",
            "right": "1%",
            "userSelect": "none",
          }
        }
      >
        Right
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly when there are multiple items 1`] = `
<div>
  <div>
    <div
      className="react-horizontal-scrolling-menu--wrapper "
      onWheel={[Function]}
    >
      <button
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "opacity": "0",
            "right": "1%",
            "userSelect": "none",
          }
        }
      >
        Left
      </button>
      <div
        className="react-horizontal-scrolling-menu--scroll-container "
        onScroll={[Function]}
      >
        <div
          className="react-horizontal-scrolling-menu--item "
          data-index={0}
          data-key="JmFldiNGY18"
        >
          <div
            className="sc-bdvvtL ckbbZK card"
            role="button"
            style={
              Object {
                "margin": "0px 8px 0px 8px",
                "userSelect": "none",
                "width": "120px",
              }
            }
            tabIndex={0}
            title="JmFldiNGY18"
          />
        </div>
        <div
          className="react-horizontal-scrolling-menu--separator "
          data-index={0.1}
          data-key="JmFldiNGY18-separator"
        />
        <div
          className="react-horizontal-scrolling-menu--item "
          data-index={1}
          data-key="sNS-uuP01hE"
        >
          <div
            className="sc-bdvvtL fRdRvy card"
            role="button"
            style={
              Object {
                "margin": "0px 8px 0px 8px",
                "userSelect": "none",
                "width": "120px",
              }
            }
            tabIndex={0}
            title="sNS-uuP01hE"
          />
        </div>
      </div>
      <button
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "opacity": "1",
            "right": "1%",
            "userSelect": "none",
          }
        }
      >
        Right
      </button>
    </div>
  </div>
</div>
`;
